# pymc-sphinx-theme

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/pymc_sphinx_theme/: __init__.py  layout.html  search.html  theme.conf
src/pymc_sphinx_theme/components/: edit-this-page.html  pymc_icon_links.html  search-button.html  search-field.html
src/pymc_sphinx_theme/static/css/: style.css
src/pymc_sphinx_theme/static/js/: readthedocs.js
